Se crea botón para mostrar loschistes mejor calificados.

--- a/app/src/main/res/layout/activity_fourth.xml
+++ b/app/src/main/res/layout/activity_fourth.xml
@@ -33,4 +33,10 @@
         android:layout_height="wrap_content"
         android:text="@string/boton12" />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/txt_chiste2" />
+
 </LinearLayout>
