--- a/app/src/main/res/layout/activity_fourth.xml
+++ b/app/src/main/res/layout/activity_fourth.xml
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:text="@string/txt_chiste3" />
     <EditText
-        android:id="@+id/txt_chiste"
+        android:id="@+id/txt_chiste1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content"
         android:text="@string/txt_chiste4" />
     <EditText
-        android:id="@+id/txt_chiste"
+        android:id="@+id/txt_chiste2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -66,7 +66,7 @@
         android:layout_height="wrap_content"
         android:text="@string/txt_chiste5" />
     <EditText
-        android:id="@+id/txt_chiste"
+        android:id="@+id/txt_chiste3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
